# Rover_RDF_Capstone

./: README.md  Receiver.cpp  transmitter.cpp
gps_library/new_gps/: CMakeLists.txt  new_gps.c
lora_library/github lora_library/: LoRa-RP2040.cpp  LoRa-RP2040.h  Print.cpp  Print.h
